deploy/social-network-fe/dev/03.deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: _SERVICE_NAME_
spec:
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
  selector:
    matchLabels:
      app: _SERVICE_NAME_
  template:
    metadata:
      labels:
        app: _SERVICE_NAME_
    spec:
      imagePullSecrets:
      - name: docker-registry-secret
      containers:
      - name: _SERVICE_NAME_
        image: _IMAGE_
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
