deploy/social-network-fe/dev/04.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: _SERVICE_NAME_-service
spec:
  selector:
    app: _SERVICE_NAME_
  ports:
  - port: 80
    targetPort: 80
