deploy/social-network-fe/dev/05.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: _SERVICE_NAME_-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: webapi.dev.local
    http:
      paths:
      - path: /_SERVICE_NAME_-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: _SERVICE_NAME_-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - _SERVICE_NAME_.dev.local
  #   secretName: _SERVICE_NAME_-api-dev-tls
